--- a/manifest.json
+++ b/manifest.json
@@ -1200,7 +1200,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/deploy-an-update-to-an-existing-environment.html",
-          "hash": "89eTnTEBxvzsK9uwzo+hTQ=="
+          "hash": "MaHxLswbAAX0PhfnDEZRew=="
         }
       },
       "is_incremental": false,
@@ -1269,7 +1269,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/git-folder-standardization.html",
-          "hash": "18COSeynjfDgT7kqORF9OQ=="
+          "hash": "9qmtxLK9swamvXzM7dcuKw=="
         }
       },
       "is_incremental": false,
@@ -2741,6 +2741,28 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "home/techguides/images/db-properties.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/db-properties.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/db-properties2.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/db-properties2.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "home/techguides/images/db-push-db.png",
       "output": {
         "resource": {
@@ -2888,28 +2910,6 @@
       "output": {
         "resource": {
           "relative_path": "home/techguides/images/db.png"
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "Resource",
-      "source_relative_path": "home/techguides/images/db.properties.png",
-      "output": {
-        "resource": {
-          "relative_path": "home/techguides/images/db.properties.png"
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "Resource",
-      "source_relative_path": "home/techguides/images/db.properties2.png",
-      "output": {
-        "resource": {
-          "relative_path": "home/techguides/images/db.properties2.png"
         }
       },
       "is_incremental": false,
@@ -8116,8 +8116,14 @@
         "incrementalPhase": "build"
       },
       "processors": {
-        "ManagedReferenceDocumentProcessor": {
+        "TocDocumentProcessor": {
           "can_incremental": false,
+          "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build"
+        },
+        "ResourceDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
         "RestApiDocumentProcessor": {
@@ -8125,18 +8131,12 @@
           "details": "Processor RestApiDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
-        "TocDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
-          "incrementalPhase": "build"
-        },
         "ConceptualDocumentProcessor": {
           "can_incremental": false,
           "incrementalPhase": "build"
         },
-        "ResourceDocumentProcessor": {
+        "ManagedReferenceDocumentProcessor": {
           "can_incremental": false,
-          "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         }
       }
