--- a/manifest.json
+++ b/manifest.json
@@ -1110,24 +1110,30 @@
       "version": ""
     },
     {
+      "log_codes": [
+        "InvalidFileLink"
+      ],
       "type": "Conceptual",
       "source_relative_path": "home/techguides/access-t24-ud-directories.md",
       "output": {
         ".html": {
           "relative_path": "home/techguides/access-t24-ud-directories.html",
-          "hash": "cOS714wuHD/oOKEBlQ1TPA=="
+          "hash": "+RaMjc0g6vOx3fmrSZOF9w=="
         }
       },
       "is_incremental": false,
       "version": ""
     },
     {
+      "log_codes": [
+        "InvalidFileLink"
+      ],
       "type": "Conceptual",
       "source_relative_path": "home/techguides/add-app-endpoint.md",
       "output": {
         ".html": {
           "relative_path": "home/techguides/add-app-endpoint.html",
-          "hash": "fwBpIp2hWMDMGntw8m/IKQ=="
+          "hash": "fMvEWVBg7fcAczF3IW8Q1w=="
         }
       },
       "is_incremental": false,
@@ -1142,7 +1148,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/artifactory-test-cycle.html",
-          "hash": "RTkLFmbXdTnSS1Uv7g8Tiw=="
+          "hash": "crgyDzx0aK3Ky5kPHpXv9g=="
         }
       },
       "is_incremental": false,
@@ -1157,43 +1163,52 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/automated-factories.html",
-          "hash": "saiYodr7dIrf7zqmkC8+pw=="
+          "hash": "WnT5dNycDw5CconK1+zkJA=="
         }
       },
       "is_incremental": false,
       "version": ""
     },
     {
+      "log_codes": [
+        "InvalidFileLink"
+      ],
       "type": "Conceptual",
       "source_relative_path": "home/techguides/clone-environment.md",
       "output": {
         ".html": {
           "relative_path": "home/techguides/clone-environment.html",
-          "hash": "VNToIHeNaMLBPNAH9G7SLA=="
+          "hash": "JixGtsGui3x8O4IYBwdVWQ=="
         }
       },
       "is_incremental": false,
       "version": ""
     },
     {
+      "log_codes": [
+        "InvalidFileLink"
+      ],
       "type": "Conceptual",
       "source_relative_path": "home/techguides/components-products.md",
       "output": {
         ".html": {
           "relative_path": "home/techguides/components-products.html",
-          "hash": "zLH7sGLZQnHeOiM0xmkxSw=="
+          "hash": "rp1j+stQa+DJOThgMgtP8w=="
         }
       },
       "is_incremental": false,
       "version": ""
     },
     {
+      "log_codes": [
+        "InvalidFileLink"
+      ],
       "type": "Conceptual",
       "source_relative_path": "home/techguides/create-publish-template.md",
       "output": {
         ".html": {
           "relative_path": "home/techguides/create-publish-template.html",
-          "hash": "FkHHSB7FOWbGammxscGU6g=="
+          "hash": "DqodNraCgMA8pfgfmKT1/A=="
         }
       },
       "is_incremental": false,
@@ -1220,7 +1235,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/customize-templates.html",
-          "hash": "3nUie7tWJ+dBoJTLJkxhwg=="
+          "hash": "VQQW61rVKE4Sg4bSpL7m5Q=="
         }
       },
       "is_incremental": false,
@@ -1235,19 +1250,22 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/deploy-an-update-to-an-existing-environment.html",
-          "hash": "1BJYW+B8Sxuws+ezGCLpDA=="
+          "hash": "raruvddcGsLEZy3tXPb3UQ=="
         }
       },
       "is_incremental": false,
       "version": ""
     },
     {
+      "log_codes": [
+        "InvalidFileLink"
+      ],
       "type": "Conceptual",
       "source_relative_path": "home/techguides/environment-basic-operations.md",
       "output": {
         ".html": {
           "relative_path": "home/techguides/environment-basic-operations.html",
-          "hash": "xRz5tK333+9O1/MrcDq8Rg=="
+          "hash": "y6PotuzOG4JGbPJW/gCeeA=="
         }
       },
       "is_incremental": false,
@@ -1262,19 +1280,22 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/export-import-database.html",
-          "hash": "JLe39yjrX3xSn7kiw01+Cg=="
+          "hash": "HXY3otDOVq965SkEAfOtOw=="
         }
       },
       "is_incremental": false,
       "version": ""
     },
     {
+      "log_codes": [
+        "InvalidFileLink"
+      ],
       "type": "Conceptual",
       "source_relative_path": "home/techguides/fcm-configuration.md",
       "output": {
         ".html": {
           "relative_path": "home/techguides/fcm-configuration.html",
-          "hash": "ctXj4dv4k02xhl8smKM21g=="
+          "hash": "q7SS9ZvbTCeAp6w0d4dJIQ=="
         }
       },
       "is_incremental": false,
@@ -1296,12 +1317,15 @@
       "version": ""
     },
     {
+      "log_codes": [
+        "InvalidFileLink"
+      ],
       "type": "Conceptual",
       "source_relative_path": "home/techguides/https-in-front-of-sftp.md",
       "output": {
         ".html": {
           "relative_path": "home/techguides/https-in-front-of-sftp.html",
-          "hash": "321wpwspmK/G+fNKeaN14A=="
+          "hash": "fbn+D5mnK9o3xB8vAs9Ctg=="
         }
       },
       "is_incremental": false,
@@ -7458,24 +7482,30 @@
       "version": ""
     },
     {
+      "log_codes": [
+        "InvalidFileLink"
+      ],
       "type": "Conceptual",
       "source_relative_path": "home/techguides/itss-test-framework-template.md",
       "output": {
         ".html": {
           "relative_path": "home/techguides/itss-test-framework-template.html",
-          "hash": "jkLlDkYIbrJ6qykkBXz2Hw=="
+          "hash": "IXyyMuDz3N0o+1mqfop/yg=="
         }
       },
       "is_incremental": false,
       "version": ""
     },
     {
+      "log_codes": [
+        "InvalidFileLink"
+      ],
       "type": "Conceptual",
       "source_relative_path": "home/techguides/manage-workflows.md",
       "output": {
         ".html": {
           "relative_path": "home/techguides/manage-workflows.html",
-          "hash": "5B086vjRSSzzY7sOp+UL/w=="
+          "hash": "QBncoDHXmXvRUH5PkxYBjg=="
         }
       },
       "is_incremental": false,
@@ -7499,7 +7529,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/release-notes.html",
-          "hash": "CIuVsGSXfet/poK0MKx0tA=="
+          "hash": "4VkjA5TQrpq6v3owGy3wGg=="
         }
       },
       "is_incremental": false,
@@ -7514,7 +7544,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/run-factory.html",
-          "hash": "hPKvGk6kQoKf/SB/tRtt9g=="
+          "hash": "+R5kzQoKLS2E5CxRpBynGg=="
         }
       },
       "is_incremental": false,
@@ -7529,43 +7559,52 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/save-as-new-template.html",
-          "hash": "abq0+/R12vONfzenhm5XCw=="
+          "hash": "TADQWkVy635UyuNpnFVhrA=="
         }
       },
       "is_incremental": false,
       "version": ""
     },
     {
+      "log_codes": [
+        "InvalidFileLink"
+      ],
       "type": "Conceptual",
       "source_relative_path": "home/techguides/selenium-template.md",
       "output": {
         ".html": {
           "relative_path": "home/techguides/selenium-template.html",
-          "hash": "gbzepKWMz3EUCFZgJK9imA=="
+          "hash": "I3Ky1wO8TPX/oGjwBa4MSQ=="
         }
       },
       "is_incremental": false,
       "version": ""
     },
     {
+      "log_codes": [
+        "InvalidFileLink"
+      ],
       "type": "Conceptual",
       "source_relative_path": "home/techguides/stage.md",
       "output": {
         ".html": {
           "relative_path": "home/techguides/stage.html",
-          "hash": "bKPMGsnUlisD5FJiF1aNuw=="
+          "hash": "51lGBCXHuejA49yGMlYcEA=="
         }
       },
       "is_incremental": false,
       "version": ""
     },
     {
+      "log_codes": [
+        "InvalidFileLink"
+      ],
       "type": "Conceptual",
       "source_relative_path": "home/techguides/stream.md",
       "output": {
         ".html": {
           "relative_path": "home/techguides/stream.html",
-          "hash": "YAVToW1Gz6ihIF+tkjxcag=="
+          "hash": "pF4MJAoQR+TpsaLnHoERRg=="
         }
       },
       "is_incremental": false,
@@ -7647,12 +7686,15 @@
       "version": ""
     },
     {
+      "log_codes": [
+        "InvalidFileLink"
+      ],
       "type": "Conceptual",
       "source_relative_path": "home/techguides/upgrade-trials.md",
       "output": {
         ".html": {
           "relative_path": "home/techguides/upgrade-trials.html",
-          "hash": "SKIXIcGZ0JmV9cVEJ8Zsww=="
+          "hash": "JORzJuJl9JrZgpiS1bLR6A=="
         }
       },
       "is_incremental": false,
@@ -7674,12 +7716,15 @@
       "version": ""
     },
     {
+      "log_codes": [
+        "InvalidFileLink"
+      ],
       "type": "Conceptual",
       "source_relative_path": "home/techguides/user-permissions.md",
       "output": {
         ".html": {
           "relative_path": "home/techguides/user-permissions.html",
-          "hash": "uTzYAwzSXHONYXq88OBhvg=="
+          "hash": "Sfn0RPYYdX51yUNHUTRw7Q=="
         }
       },
       "is_incremental": false,
